@@ -6,7 +6,7 @@ type:
   - Set Collection
   - Push Your Luck
   - Draw & Write
-players: 2, 3, 4, 5, 6, 7, 8
+players: 2, 3, 4, 5, 6, 7, 8, 9, 10
 cards:
   Base:
     all-players:
