@@ -3,7 +3,7 @@ type:
   - Trick Taking
   - Predictive Bid
   - Score and Reset
-players: 3, 4, 5, 6, 7, 8
+players: 3, 4, 5, 6, 7, 8, 9, 10
 cards:
   Base:
     all-players:
